datasets/dataset_txt/tornado/tornado_76.txt
dibasdas commented on 23 Mar 2019
pk@pk-Inspiron-5558:~/my-project$ mkdocs serve
INFO - Building documentation...
INFO - Cleaning site directory
Traceback (most recent call last):
File "/home/pk/.local/bin/mkdocs", line 11, in
sys.exit(cli())
File "/home/pk/.local/lib/python2.7/site-packages/click/core.py", line 764, in call
return self.main(*args, **kwargs)
File "/home/pk/.local/lib/python2.7/site-packages/click/core.py", line 717, in main
rv = self.invoke(ctx)
File "/home/pk/.local/lib/python2.7/site-packages/click/core.py", line 1137, in invoke
return _process_result(sub_ctx.command.invoke(sub_ctx))
File "/home/pk/.local/lib/python2.7/site-packages/click/core.py", line 956, in invoke
return ctx.invoke(self.callback, **ctx.params)
File "/home/pk/.local/lib/python2.7/site-packages/click/core.py", line 555, in invoke
return callback(*args, **kwargs)
File "/home/pk/.local/lib/python2.7/site-packages/mkdocs/main.py", line 134, in serve_command
livereload=livereload
File "/home/pk/.local/lib/python2.7/site-packages/mkdocs/commands/serve.py", line 124, in serve
_livereload(host, port, config, builder, site_dir)
File "/home/pk/.local/lib/python2.7/site-packages/mkdocs/commands/serve.py", line 36, in _livereload
from livereload import Server
File "/home/pk/.local/lib/python2.7/site-packages/livereload/init.py", line 15, in
from .server import Server, shell
File "/home/pk/.local/lib/python2.7/site-packages/livereload/server.py", line 20, in
from tornado.wsgi import WSGIContainer
File "/home/pk/.local/lib/python2.7/site-packages/tornado/wsgi.py", line 51
def to_wsgi_str(s, bytes) -> str:
^
SyntaxError: invalid syntax